# pinch

./: .gitignore  CONTRIBUTING.rst  README.md  checks.ipynb  pyproject.toml
.github/workflows/: deploy.yml
Sandbox/: checks.ipynb  class.ipynb  functions.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
pinch/: sdm.py
tests/: test_pinch.py
