[tool.poetry]
name = "pinch"
version = "0.1.0"
description = "A python package that elucidates the pinch analysis technique used in designing energy efficient processes. "
authors = ["Ifeanyi Anene"]
license = "MIT"
readme = "README.md"
documentation = "https://pinch.readthedocs.io/en/latest/"
homepage = "https://github.com/IfyAnene7/pinch"
repository = "https://github.com/IfyAnene7/pinch"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
